# MetaStalk

./: .codeclimate.yml  .deepsource.toml  .dockerignore  .gitignore  .gitlab-ci.yml  .pylint  .pylintrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  Manifest.in  Pipfile  PyStalk.py  README.md  Readme.md  code_of_conduct.md  codecov.yml  deepsource.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.gitlab/issue_templates/: Bug.md
.gitlab/merge_request_templates/: MR.md
ExamplePhotos/heic/: IMG_1005.HEIC  IMG_1009.HEIC  IMG_1039.HEIC  IMG_1567.HEIC  IMG_1751.HEIC  IMG_1792.HEIC
MetaStalk/: __init__.py  main.py
MetaStalk/modules/: DateTime.py  GPSCheck.py  PieChart.py  Stats.py  __init__.py
MetaStalk/tests/: test_main.py
MetaStalk/utils/: __init__.py  export.py  heic_parse.py  logger.py  parse.py  update.py  web.py
docker/: Dockerfile  docker-bake.hcl  run.sh
graph_web/: __init__.py  app.py
modules/: DateTime.py  Flash.py  Focal.py  GPSCheck.py  Models.py  PhotoTable.py  PieChart.py  Software.py  Stats.py  __init__.py
requirements/: all.txt  default.txt  dev.txt  heic.txt  image_export.txt
tests/: __init__.py  test_main.py
utils/: __init__.py  app.py  logger.py  web.py
