[metadata]
download_url = https://gitlab.com/Cyb3r-Jak3/metastalk/-/releases

[options.extras_require]
heic = 
    pyheif >= 0.4
image =
    psutil >= 5.7.0
    requests >= 2.23.0
full =
    psutil >= 5.7.0
    requests >= 2.23.0
    pyheif >= 0.4
dev =
	bandit >= 1.6.2
	pylint >= 2.5.0
    flake8 >= 3.7.9
    coverage >= 4.5.4
    tox >= 3.15.0
all =
	bandit >= 1.6.2
	pylint >= 2.5.0
    flake8 >= 3.7.9
    coverage >= 4.5.4
    tox >= 3.15.0
    pyheif >= 0.4
    psutil >= 5.7.0
    requests >= 2.23.0

[sdist]
formats = zip, gztar