[metadata]
download_url = https://gitlab.com/Cyb3r-Jak3/metastalk/-/releases

[options.extras_require]
image =
    psutil == 5.7.0
dev =
    black == 19.10b0
	bandit == 1.6.2
	pylint == 2.5.3
    flake8 == 3.8.3
    coverage == 5.2
    tox == 3.16.1
all =
    black == 19.10b0
	bandit == 1.6.2
	pylint == 2.5.0
    flake8 == 3.7.9
    coverage == 4.5.4
    tox == 3.15.2
    psutil == 5.7.0
